Fix CORS for Vercel domains